<resources>
    <string name="app_name">Weather</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Setting</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="meter_sec">Meter/Sec</string>
    <string name="mile_hour">Mile/Hour</string>
    <string name="notification">Notification:</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="language">Language</string>
    <string name="settingLabel">Setting</string>
    <string name="alerts">Alerts</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="ultra_violet">Ultra Violet</string>
    <string name="visibility">Visibility</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="No_internet_connection">No internet connection</string>
    <string name="enter_address_city_or_zip_code">Enter Address, City or Zip Code</string>
    <string name="confirmation_message">Confirmation message</string>
    <string name="are_You_Sure">Are you sure?</string>
    <string name="You_want_to_delete_this_palce">you want to delete this place</string>
    <string name="Confirm">Confirm</string>
    <string name="Cancle">Cancle</string>
    <string name="Unknown_city">Unknown city</string>
    <string name="place">Place</string>
    <string name="Favourite_Place_Details">Favourite Place Details</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="alarm">Alarm</string>
    <string name="save">Save</string>
    <string name="notificationAlertsOption">Notification</string>
    <string name="NoAlerts">No Alerts</string>
    <string name="dismiss">dismiss</string>
    <string name="weather_alert">Weather alert</string>
    <string name="draw_overlays">Please, Enable Draw Overlays permission.</string>
    <string name="draw_overlays_description">You will not receive notifications while the app is in the background if you disable these permissions.\n\nEnable…\n1) Display pop-up windows while running in the background \n2) Display pop-up window</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="error_msg_permission_required">Permission required!\nPlease, give the permission to work correctly!</string>
    <string name="empty_alarm_from">You must select (From) date and time!</string>
    <string name="empty_alarm_to">You must select (To) date and time!</string>
    <string name="warning">Warning</string>
    <string name="ok">OK</string>
</resources>