<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F3F0F7" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#F3F0F7"
        tools:context=".Setting.view.SettingActivity">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp"
            app:cardElevation="8dp"
            android:focusable="true"
            app:cardCornerRadius="@dimen/_10sdp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/location"
                    android:gravity="center"
                    />
    <!--            <View-->
    <!--                android:id="@+id/view2"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="1dp"-->
    <!--                android:layout_marginStart="16dp"-->
    <!--                android:background="#F3F0F7"-->
    <!--                app:layout_constraintStart_toEndOf="@+id/medIconRecylerViewHomeScreen"-->
    <!--                app:layout_constraintTop_toTopOf="@+id/medIconRecylerViewHomeScreen" />-->
                <RadioGroup
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/GPS"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:checked="true"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@android:color/transparent"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:gravity="center"
                    android:textColor="@drawable/radio_flat_text_selector"
                    android:text="@string/gps"
                    />
                <RadioButton
                    android:id="@+id/Map"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@android:color/transparent"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:gravity="center"
                    android:textColor="@drawable/radio_flat_text_selector"
                    android:text="@string/map"
                    />
                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp"
            app:cardElevation="8dp"
            android:focusable="true"
            app:cardCornerRadius="@dimen/_10sdp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/wind_speed"
                    android:gravity="center"
                    />
                <RadioGroup
                    android:id="@+id/windSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/MeterSec"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:checked="true"
                        android:background="@drawable/radio_flat_selector"
                        android:button="@android:color/transparent"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_flat_text_selector"
                        android:text="@string/meter_sec"
                        />
                    <RadioButton
                        android:id="@+id/MileHour"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:background="@drawable/radio_flat_selector"
                        android:button="@android:color/transparent"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_flat_text_selector"
                        android:text="@string/mile_hour"
                        />
                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp"
            app:cardElevation="8dp"
            android:focusable="true"
            app:cardCornerRadius="@dimen/_10sdp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/temperature"
                    android:gravity="center"
                    />
                <RadioGroup
                    android:id="@+id/temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/Celsius"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:checked="true"
                        android:background="@drawable/radio_flat_selector"
                        android:button="@android:color/transparent"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_flat_text_selector"
                        android:text="@string/celsius"
                        />
                    <RadioButton
                        android:id="@+id/Kelvin"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:background="@drawable/radio_flat_selector"
                        android:button="@android:color/transparent"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_flat_text_selector"
                        android:text="@string/kelvin"
                        />
                    <RadioButton
                        android:id="@+id/Fahrenheit"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:background="@drawable/radio_flat_selector"
                        android:button="@android:color/transparent"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_flat_text_selector"
                        android:text="@string/fahrenheit"
                        />
                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:switchMinWidth="56dp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:text="@string/notification"
            android:checked="true"
            android:textColor="#777777"
            android:textOff="OFF"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:textOn="ON"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:layout_margin="@dimen/_16sdp"
            android:text="Language"
            />
        <RadioGroup
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_16sdp"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/English"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/english"
                android:checked="true"
                />
        <RadioButton
            android:id="@+id/Arabic"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_32sdp"

            android:gravity="center"
            android:text="@string/arabic"
            />

        </RadioGroup>
    </LinearLayout>
</ScrollView>